docs/vocabulary-synopsis/_sources/1.1.0/index.rst.txt
Type Hierarchy
==============

.. note::
   This is the **latest version** of the vocabulary (1.1.0).

This page shows the inheritance relationships and complete type index for
CLAMS Vocabulary 1.1.0.

**Previous version:** :doc:`1.0.4 <../1.0.4/index>`

Inheritance Tree
----------------

.. inheritance-tree::

   └── Thing (v1) | id
       ├── Alignment (v2) | source, target, sourceType, targetType
       ├── Annotation (v7) | classification, classifications, document, label, labelset, labelsetUri
       │   ├── Region (v6) | timeUnit
       │   │   ├── Interval (v5) | end, start, targets
       │   │   │   ├── Span (v5) | text
       │   │   │   │   ├── NamedEntity (v1) | 
       │   │   │   │   ├── NounChunk (v1) | 
       │   │   │   │   ├── Paragraph (v1) | 
       │   │   │   │   ├── Sentence (v1) | 
       │   │   │   │   ├── Token (v1) | lemma, orth, pos
       │   │   │   │   └── VerbChunk (v1) | neg, tense, voice
       │   │   │   └── TimeFrame (v6) | frameType
       │   │   │       └── Chapter (v6) | title
       │   │   ├── Polygon (v5) | coordinates, timePoint
       │   │   │   └── BoundingBox (v5) | boxType
       │   │   ├── TimePoint (v5) | timePoint
       │   │   └── VideoObject (v5) | polygons
       │   └── Relation (v5) | 
       └── Document (v1) | location, mime
           ├── AudioDocument (v1) | 
           ├── ImageDocument (v1) | 
           ├── TextDocument (v1) | text
           └── VideoDocument (v1) | 